--- a/NoteRIder/NoteRIder.csproj
+++ b/NoteRIder/NoteRIder.csproj
@@ -52,9 +52,6 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -69,9 +66,6 @@
     </Reference>
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.VR">
       <HintPath>Library\UnityAssemblies\UnityEngine.VR.dll</HintPath>
@@ -109,8 +103,11 @@
     <Compile Include="Assets\Platform\NewBehaviourScript.cs" />
     <Compile Include="Assets\Platform\PlatformMovement.cs" />
     <Compile Include="Assets\PosMov.cs" />
+    <Compile Include="Assets\fall.cs" />
     <Compile Include="Assets\killZon.cs" />
+    <Compile Include="Assets\killZone.cs" />
     <Compile Include="Assets\platf.cs" />
+    <Compile Include="Assets\sharpPower.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Physics2DSideScroller\README.txt" />
